Fixed spacing on work pages in mobile

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -75,7 +75,7 @@ header {
 	.search-wrap.case-studies{margin-top: 20px;}
 	.search-wrap.blog{margin-top: 20px;}
 	.search-wrap.about{margin-top: 75px;}
-	.search-wrap.work{margin-top: 75px;}
+	.search-wrap.work, .search-wrap.detail{margin-top: 15px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
